테스트용 주석 제거함

--- a/MagentaKeras/PredictStock.ipynb
+++ b/MagentaKeras/PredictStock.ipynb
@@ -10,8 +10,7 @@
      "output_type": "stream",
      "text": [
       "compilation time: 0.027001619338989258\n",
-      "num is :  8.18\n",
-      "yo\n"
+      "num is :  8.18\n"
      ]
     },
     {
